samples/_failures_safe/1761043512_09e3e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41c2a925.c: In function ‘main’:
./samples/SAFE/__tmp_41c2a925.c:132:5: error: expected expression at end of input
  132 |     if (matrix_transpose(&b,
      |     ^~
./samples/SAFE/__tmp_41c2a925.c:132:5: error: expected declaration or statement at end of input
